--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,14 @@
+privat.*
+.pio
+.vscode/*
+.vscode/.browse.c_cpp.db*
+.vscode/c_cpp_properties.json
+.vscode/launch.json
+.vscode/ipch
+*.bak
+project.idx
+doc/*
+
 # Prerequisites
 *.d
 
